--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -441,4 +441,10 @@
   <data name="notification_culture_invalid" xml:space="preserve">
     <value>The notification culture is invalid</value>
   </data>
+  <data name="cloud_storage_file_access_denied" xml:space="preserve">
+    <value>Access to the file was denied</value>
+  </data>
+  <data name="cloud_storage_file_not_found" xml:space="preserve">
+    <value>The file was not found</value>
+  </data>
 </root>
