* Support OIDC connect SSO (WIP)

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -369,6 +369,9 @@
   <data name="cookie_invalid_or_expired" xml:space="preserve">
     <value>Das Cookie ist ungültig oder abgelaufen</value>
   </data>
+  <data name="external_user_id_is_missing" xml:space="preserve">
+    <value>Die externe Benutzer-ID fehlt</value>
+  </data>
   <data name="first_name_invalid" xml:space="preserve">
     <value>Der Vorname enthält ungültige Zeichen</value>
   </data>
