* Further WIP on OIDC SSO

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -444,6 +444,9 @@
   <data name="notification_culture_invalid" xml:space="preserve">
     <value>Die Benachrichtigungs-Sprache ist ungültig</value>
   </data>
+  <data name="account_is_externally_managed" xml:space="preserve">
+    <value>Dieser Vorgang kann nicht durchgeführt werden, weil das Benutzerkonto extern verwaltet wird</value>
+  </data>
   <data name="cloud_storage_file_access_denied" xml:space="preserve">
     <value>Der Zugriff auf die Datei wurde verweigert</value>
   </data>
