--- a/HCore-Identity/Resources/Messages.de.resx
+++ b/HCore-Identity/Resources/Messages.de.resx
@@ -372,4 +372,7 @@
   <data name="accept_communication" xml:space="preserve">
     <value>Ich bin damit einverstanden, in Übereinstimmung mit der &lt;a href="{1}" target="_blank"&gt;Datenschutzerklärung&lt;/a&gt; E-Mail-Nachrichten über {0} Produkte und Neuigkeiten zu erhalten. Ich habe verstanden, dass ich diese Zustimmung jederzeit widerrufen kann.</value>
   </data>
+  <data name="change_password_not_possible" xml:space="preserve">
+    <value>Sie können Ihr Passwort hier nicht ändern, weil Ihr Benutzerkonto extern verwaltet wird. Für weitere Auskünfte kontaktieren Sie bitte Ihren Systemadministrator.</value>
+  </data>
 </root>
