--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -444,6 +444,9 @@
   <data name="notification_culture_invalid" xml:space="preserve">
     <value>The notification culture is invalid</value>
   </data>
+  <data name="account_is_externally_managed" xml:space="preserve">
+    <value>This operation cannot be performed, because the user account is externally managed</value>
+  </data>
   <data name="cloud_storage_file_access_denied" xml:space="preserve">
     <value>Access to the file was denied</value>
   </data>
