* Remove dynamic registration of external users (will be done through central user store)

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -371,6 +371,9 @@
   </data>
   <data name="external_user_id_is_missing" xml:space="preserve">
     <value>Die externe Benutzer-ID fehlt</value>
+  </data
+  <data name="external_user_not_found" xml:space="preserve">
+    <value>Der externe Benutzer wurde nicht gefunden</value>
   </data>
   <data name="first_name_invalid" xml:space="preserve">
     <value>Der Vorname enthält ungültige Zeichen</value>
