--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -372,6 +372,9 @@
   <data name="external_user_id_is_missing" xml:space="preserve">
     <value>The external user ID is missing</value>
   </data>
+  <data name="external_user_not_found" xml:space="preserve">
+    <value>The external user was not found</value>
+  </data>
   <data name="first_name_invalid" xml:space="preserve">
     <value>The first name contains invalid characters</value>
   </data>
