* Fix compile time error

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -371,7 +371,7 @@
   </data>
   <data name="external_user_id_is_missing" xml:space="preserve">
     <value>Die externe Benutzer-ID fehlt</value>
-  </data
+  </data>
   <data name="external_user_not_found" xml:space="preserve">
     <value>Der externe Benutzer wurde nicht gefunden</value>
   </data>
