--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -219,6 +219,9 @@
   <data name="notification_culture_missing" xml:space="preserve">
     <value>Die Benachrichtigungs-Sprache fehlt</value>
   </data>
+  <data name="currency_missing" xml:space="preserve">
+    <value>Die Währung fehlt</value>
+  </data>
   <data name="please_accept_terms_and_conditions" xml:space="preserve">
     <value>Bitte akzeptieren Sie unsere Allgemeinen Geschäftsbedingungen</value>
   </data>
