--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -219,8 +219,11 @@
   <data name="notification_culture_missing" xml:space="preserve">
     <value>The notification language is missing</value>
   </data>
-  <data name="currency:missing" xml:space="preserve">
+  <data name="currency_missing" xml:space="preserve">
     <value>The currency is missing</value>
+  </data>
+  <data name="currency_invalid" xml:space="preserve">
+    <value>The currency is invalid</value>
   </data>
   <data name="please_accept_terms_and_conditions" xml:space="preserve">
     <value>Please accept our Terms and Conditions</value>
